--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World - Rust</title>
+    <title>Mandelbrot generation</title>
     <script type="module" src="./script.js"></script>
   </head>
   <body>
