--- a/www/index.html
+++ b/www/index.html
@@ -17,11 +17,29 @@
         <label for="simd">SIMD:</label>
         <input type="checkbox" id="simd" />
       </div>
-      <div class="max-iter">
+      <div class="field">
         <label for="max-iter">Max Iterations:</label>
         <input type="number" id="max-iter" value="100" min="0" />
       </div>
       <button id="render">Render</button>
+    </div>
+    <div class="span">
+      <div class="field">
+      <label for="min-r">Real min:</label>
+      <input type="number" id="min-r" value="-2" />
+      </div>
+      <div class="field">
+      <label for="max-r">Real max:</label>
+      <input type="number" id="max-r" value="0.47" />
+      </div>
+      <div class="field">
+      <label for="min-i">Imaginary min:</label>
+      <input type="number" id="min-i" value="-1.12" />
+      </div>
+      <div class="field">
+      <label for="max-i">Imaginary max:</label>
+      <input type="number" id="max-i" value="1.12" />
+      </div>
     </div>
     <div class="output">
       <label for="output">Time to render:</label>
@@ -57,7 +75,7 @@
       color: whitesmoke;
     }
 
-    .inputs {
+    .inputs, .span {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -70,6 +88,9 @@
       margin-right: 10px;
       display: flex;
       flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      width: 80%;
     }
 
     .top {
