--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,20 @@
       <input type="number" id="max-i" value="1.12" />
       </div>
     </div>
+    <div class="colors">
+      <div class="field">
+      <label for="red">Max red:</label>
+      <input type="number" id="red" value="255" />
+      </div>
+      <div class="field">
+      <label for="green">Max green:</label>
+      <input type="number" id="green" value="255" />
+      </div>
+      <div class="field">
+      <label for="blue">Max blue:</label>
+      <input type="number" id="blue" value="255" />
+      </div>
+    </div>
     <div class="output">
       <label for="output">Time to render:</label>
       <span id="output">0ms</span>
@@ -50,6 +64,7 @@
     <canvas id="display" width="800" height="600">
         Your browser does not support the HTML5 canvas element.
     </canvas>
+    <a id="share">Copy link</a>
     </div>
   </body>
 
@@ -75,7 +90,7 @@
       color: whitesmoke;
     }
 
-    .inputs, .span {
+    .inputs, .span, .colors {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -88,9 +103,7 @@
       margin-right: 10px;
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
       align-items: center;
-      width: 80%;
     }
 
     .top {
@@ -108,6 +121,16 @@
       align-items: center;
       width: 50%;
       min-width: 800px;
+    }
+
+    #share {
+      color: whitesmoke;
+      text-decoration: none;
+      margin-top: 10px;
+      cursor: pointer;
+      background-color: green;
+      padding: 5px;
+      border-radius: 5px;
     }
 
     #output {
